# duck

./: .gitignore  CMakeLists.txt  README.md
shaders/: duck.vert  skybox.vert  wall.frag  water.frag  water.vert
src/: Camera.cpp  Camera.h  DuckAnimator.cpp  DuckAnimator.h  Model.cpp  Model.h  Shader.cpp  Shader.h  WaterSimulator.cpp  WaterSimulator.h  main.cpp
